postgres-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres-db
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
      - name: postgres-db
        image: postgres:9.6
        ports:
        - containerPort: 5432
        resources:
          limits:
            cpu: 200m
            memory: 256M
          requests:
            cpu: 0m
            memory: 100M
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
      volumes:
      - name: postgres-data
        gcePersistentDisk:
          pdName: postgres-data
          fsType: ext4
