yawn-webserver-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: yawn-webserver
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: yawn-webserver
    spec:
      containers:
      - name: yawn-webserver
        image: quay.io/aclowes/yawn-gke:latest
        # TODO run migrations on startup
        command: ["yawn", "webserver"]
        ports:
        - containerPort: 8000
