yawn-worker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: yawn-worker
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: yawn-worker
    spec:
      containers:
      - name: yawn-worker
        image: quay.io/aclowes/yawn-gke:latest
        args: ["yawn", "worker"]
        resources:
          limits:
            cpu: 500m
            memory: 768M
          requests:
            cpu: 0m
            memory: 100M
        volumeMounts:
        - name: credentials-volume
          mountPath: /etc/credentials
          readOnly: true
      volumes:
      - name: credentials-volume
        secret:
          secretName: yawn-secrets
          items:
          - key: gcp.json
            path: gcp.json
