postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app: postgres-db
