yawn-webserver-service.yaml
# The service creates a health check, but YAWN needs a custom path
# and host header, see the README.

apiVersion: v1
kind: Service
metadata:
  name: yawn-webserver
spec:
  # NodePort is required for the ingress to work
  type: NodePort
  ports:
  - port: 8000
  selector:
    app: yawn-webserver
