yawn-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yawn-ingress
spec:
  tls:
    - secretName: yawn-secrets
  backend:
    serviceName: yawn-webserver
    servicePort: 8000
